Removed test files. Improved code structure. Added image view to the add exhibit activity.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,9 +28,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_margin="50px"
-        android:src="@drawable/icon_add"
-        app:srcCompat="@drawable/icon_add" />
+        android:layout_margin="15dp"
+        android:tint="@android:color/white"
+        android:src="@drawable/icon_edit"/>
 
 
 </android.support.design.widget.CoordinatorLayout>
