--- a/app/src/main/res/layout/activity_add_exhibit.xml
+++ b/app/src/main/res/layout/activity_add_exhibit.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="15dp"
     tools:context="team1.com.beaconscanner.AddExhibit"
     android:orientation="vertical">
 
@@ -11,20 +11,51 @@
         android:id="@+id/et_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Title"
-        android:textAlignment="center" />
+        android:hint="Názov exponátu"/>
+
 
     <EditText
         android:id="@+id/et_about"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="About"
-        android:textAlignment="center" />
+        android:layout_marginTop="5dp"
+        android:hint="Popis"
+        android:selectAllOnFocus="false"
+        android:singleLine="false" />
 
-    <TextView
+    <EditText
         android:id="@+id/et_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="id: " />
+        android:layout_marginTop="5dp"
+        android:hint="Beacon ID " />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/et_button_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Vybrať fotku" />
+
+        <ImageView
+            android:id="@+id/et_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="Obrázok exponátu"
+            android:layout_weight="1"/>
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/et_button_create"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:text="Pridať nový exponát" />
 
 </LinearLayout>
