--- a/app/src/main/res/layout/fragment_exhibit_row.xml
+++ b/app/src/main/res/layout/fragment_exhibit_row.xml
@@ -6,6 +6,11 @@
     android:orientation="vertical"
     >
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="THUMBNAIL" />
+
     <TextView
         android:id="@+id/fragment_exhibit_row_title"
         android:layout_width="wrap_content"
