open preview on click

--- a/app/src/main/res/layout/fragment_exhibit_list.xml
+++ b/app/src/main/res/layout/fragment_exhibit_list.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="team1.com.beaconscanner.exhibit.ExhibitListExhibit">
+    tools:context="team1.com.beaconscanner.exhibit.ExhibitListFragment">
 
     <ListView
         android:id="@+id/fragment_exhibit_list"
