--- a/app/src/main/res/layout/activity_add_exhibit.xml
+++ b/app/src/main/res/layout/activity_add_exhibit.xml
@@ -8,14 +8,14 @@
     android:orientation="vertical">
 
     <EditText
-        android:id="@+id/et_title"
+        android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Názov exponátu"/>
 
 
     <EditText
-        android:id="@+id/et_about"
+        android:id="@+id/about"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
@@ -24,7 +24,7 @@
         android:singleLine="false" />
 
     <EditText
-        android:id="@+id/et_id"
+        android:id="@+id/address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
@@ -37,13 +37,13 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/et_button_image"
+            android:id="@+id/button_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Vybrať fotku" />
 
         <ImageView
-            android:id="@+id/et_image"
+            android:id="@+id/image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="Obrázok exponátu"
@@ -52,7 +52,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/et_button_create"
+        android:id="@+id/add"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
