--- a/app/src/main/res/layout/activity_add_exhibit.xml
+++ b/app/src/main/res/layout/activity_add_exhibit.xml
@@ -39,6 +39,10 @@
             android:id="@+id/button_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:background="@color/colorPrimary"
+            android:textColor="#FFFFFF"
             android:text="Vybrať fotku" />
 
         <ImageView
@@ -55,6 +59,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
+        android:background="@color/colorPrimary"
+        android:textColor="#FFFFFF"
         android:text="Pridať nový exponát" />
 
 </LinearLayout>
