--- a/app/src/main/res/layout/activity_edit_exhibit.xml
+++ b/app/src/main/res/layout/activity_edit_exhibit.xml
@@ -39,6 +39,10 @@
             android:id="@+id/button_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:background="@color/colorPrimary"
+            android:textColor="#FFFFFF"
             android:text="Vybrať fotku" />
 
         <ImageView
@@ -55,6 +59,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:text="Upraviť exponát" />
+        android:background="@color/colorPrimary"
+        android:text="Upraviť exponát"
+        android:textColor="#FFFFFF" />
+
+    <Button
+        android:id="@+id/remove"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:background="@android:color/holo_red_light"
+        android:text="Zmazať exponát"
+        android:textColor="#FFFFFF" />
 
 </LinearLayout>
