--- a/app/src/main/res/layout/fragment_exhibit_row.xml
+++ b/app/src/main/res/layout/fragment_exhibit_row.xml
@@ -6,9 +6,8 @@
     android:orientation="vertical"
     android:paddingLeft="15dp"
     android:paddingRight="15dp"
-    android:paddingTop="5dp"
-    android:paddingBottom="5dp"
-    >
+    android:paddingTop="10dp"
+    android:paddingBottom="10dp">
 
     <ImageView
         android:layout_width="wrap_content"
