--- a/app/src/main/res/layout/fragment_exhibit_row.xml
+++ b/app/src/main/res/layout/fragment_exhibit_row.xml
@@ -29,6 +29,7 @@
         android:layout_height="wrap_content"
         android:maxLines="3"
         android:text="Popis"
+        android:ellipsize="end"
         android:textSize="16sp" />
 
     <TextView
