fixed images, also in previewExibit, added launch icon, moved texts to strings.xml

--- a/app/src/main/res/layout/activity_add_exhibit.xml
+++ b/app/src/main/res/layout/activity_add_exhibit.xml
@@ -11,14 +11,14 @@
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Názov exponátu"/>
+        android:hint="@string/add_exhibit_name"/>
 
     <EditText
         android:id="@+id/about"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:hint="Popis"
+        android:hint="@string/add_exhibit_about"
         android:selectAllOnFocus="false"
         android:singleLine="false" />
 
@@ -27,32 +27,24 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:hint="Beacon ID " />
+        android:hint="@string/add_exhibit_id" />
 
-    <LinearLayout
+    <Button
+        android:id="@+id/button_image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:orientation="horizontal">
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:background="@color/colorPrimary"
+        android:textColor="#FFFFFF"
+        android:text="@string/add_exhibit_choose_image" />
 
-        <Button
-            android:id="@+id/button_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:background="@color/colorPrimary"
-            android:textColor="#FFFFFF"
-            android:text="Vybrať fotku" />
-
-        <ImageView
-            android:id="@+id/image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="Obrázok exponátu"
-            android:layout_weight="1"/>
-
-    </LinearLayout>
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:contentDescription="@string/add_exhibit_image"
+        android:layout_weight="1"/>
 
     <Button
         android:id="@+id/add"
@@ -61,6 +53,6 @@
         android:layout_marginTop="30dp"
         android:background="@color/colorPrimary"
         android:textColor="#FFFFFF"
-        android:text="Pridať nový exponát" />
+        android:text="@string/add_exhibit_save" />
 
 </LinearLayout>
