--- a/app/src/main/res/layout/activity_add_exhibit.xml
+++ b/app/src/main/res/layout/activity_add_exhibit.xml
@@ -43,6 +43,7 @@
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="15dp"
         android:contentDescription="@string/add_exhibit_image"
         android:layout_weight="1"/>
 
