--- a/app/src/main/res/layout/activity_preview_exhibit.xml
+++ b/app/src/main/res/layout/activity_preview_exhibit.xml
@@ -26,7 +26,8 @@
                 <ImageView
                     android:id="@+id/image"
                     android:layout_width="match_parent"
-                    android:layout_height="800px"
+                    android:layout_height="300dp"
+                    android:layout_marginTop="15dp"
                     android:layout_weight="1"
                     android:contentDescription="@string/preview_exhibit_image" />
 
