--- a/app/src/main/res/layout/fragment_devices_list.xml
+++ b/app/src/main/res/layout/fragment_devices_list.xml
@@ -5,7 +5,7 @@
     tools:context="team1.com.beaconscanner.exhibit.ExhibitListFragment">
 
     <!--<TextView-->
-        <!--android:id="@+id/exhibits_loading"-->
+        <!--android:id="@+id/bluetooth_devics_loading"-->
         <!--android:layout_width="wrap_content"-->
         <!--android:layout_height="wrap_content"-->
         <!--android:text="Loading"/>-->
@@ -13,14 +13,14 @@
     <ProgressBar
         android:layout_gravity="center_horizontal"
         android:visibility="visible"
-        android:id="@+id/exhibit_loader"
+        android:id="@+id/devices_loader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:indeterminate="true" />
 
     <ListView
         android:visibility="gone"
-        android:id="@+id/exhibit_list"
+        android:id="@+id/bluetooth_devics_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
