--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_margin="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="55dp"
         android:src="@drawable/ic_add_black_24dp"
         android:tint="@android:color/white" />
 
