--- a/app/src/main/res/layout/fragment_devices_list.xml
+++ b/app/src/main/res/layout/fragment_devices_list.xml
@@ -11,7 +11,7 @@
         <!--android:text="Loading"/>-->
 
     <ProgressBar
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity="center_vertical|center_horizontal"
         android:visibility="visible"
         android:id="@+id/devices_loader"
         android:layout_width="wrap_content"
