--- a/app/src/main/res/layout/fragment_devices_row.xml
+++ b/app/src/main/res/layout/fragment_devices_row.xml
@@ -13,7 +13,7 @@
         android:id="@+id/fragment_device_row_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Nazov zariadenia"
+        android:text="@string/fragment_devices_name"
         android:textColor="@android:color/black"
         android:textSize="20sp"
         android:textStyle="bold" />
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:maxLines="3"
-        android:text="UUid"
+        android:text="@string/fragment_devices_uuid"
         android:ellipsize="end"
         android:textSize="16sp" />
 
@@ -31,6 +31,6 @@
         android:id="@+id/fragment_device_row_rssi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Približná zdialenosť od vás: X m"/>
+        android:text="@string/fragment_devices_info" />
 
 </LinearLayout>
