--- a/app/src/main/res/layout/fragment_exhibit_row.xml
+++ b/app/src/main/res/layout/fragment_exhibit_row.xml
@@ -13,7 +13,7 @@
         android:id="@+id/fragment_exhibit_image"
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:layout_marginRight="15dp"
+        android:layout_marginEnd="15dp"
         android:contentDescription="@string/fragment_exhibit_image" />
 
     <LinearLayout
@@ -46,7 +46,5 @@
             android:text="@string/fragment_exhibit_info"/>
 
     </LinearLayout>
-
-
 
 </LinearLayout>
