--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -8,7 +8,8 @@
     <FrameLayout
         android:id="@+id/fragment_overview_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingBottom="48dp">
     </FrameLayout>
 
     <android.support.design.widget.BottomNavigationView
